app/assets/stylesheets/application.scss
/* ... */
.elixir-orange-header {
  background-color: #F0721E;
}

.workflow_image {
  width: 100%;
}

/* Navbar colours */
$bgDefault: #F0721E;
$bgHighlight: #A33F00;
$colDefault: #ffe6d1;
$colHover: #333333;
$colHover2: #eeeeee;


.user_info_box{
  border: 1px solid #ddd;
  padding: 10px;
}

.profile{
  margin-bottom: 30px;
}

.navbar-default {
  background-color: $bgDefault;
  border-color: $bgHighlight;

  .navbar-brand {
    height: 100px;
  }

  .nav-pills {
    > li {
      > a {
        color: $colDefault;
        &:hover, &:focus {
          color: $colHover;
        }
      }
    }
    .active {
      > a, > a:hover, > a:focus {
        color: $colDefault;
        background-color: $bgHighlight;
      }
    }
    .open {
      > a, > a:hover, > a:focus {
        color: $colHover;
        background-color: $bgHighlight;
        .caret {
          border-top-color: $colHover;
          border-bottom-color: $colHover;
        }
      }
    }
  }

  .navbar-nav {
    > li {
      > a {
        color: $colHover2;
        &:hover, &:focus {
          color: $colHover;
          background-color: $colHover2;
        }
      }
    }
    .active {
      > a, > a:hover, > a:focus {
        background-color: $bgHighlight;
        color: $colDefault;
      }
    }
    .open {
      > a, > a:hover, > a:focus {
        color: $colHover;
        background-color: $bgHighlight;
        .caret {
          border-top-color: $colHover;
          border-bottom-color: $colHover;
        }
      }
    }
    > .dropdown {
      > a {
        .caret {
          border-top-color: $colDefault;
          border-bottom-color: $colDefault;
        }
        &:hover, &:focus {
          .caret {
            border-top-color: $colHover;
            border-bottom-color: $colHover;
          }
        }
      }
    }
  }
}

a:hover {
  color: steelblue;
  background-color: transparent;
  text-decoration: none;
}

// Bootstrap's breadcrumbs
.breadcrumbs {
  margin-top: 5px;
}
.breadcrumb {
  margin-bottom: 10px;
}

// Style for empty results etc.
.empty {
  color: #aaaaaa;
  font-style: italic;
}

// Bootstrap's primary button
.btn-primary {
  background: #206B82;
}

.btn-primary:hover, .btn-primary:focus, .btn-primary:active, .btn-primary.active, .open > .dropdown-toggle.btn-primary {
  background: #085871;
}

// Override Bootstrap's alert
.alert {
  margin-bottom: 0px;
  margin-top: 5px;
}

.btn-primary:active, .btn-primary.active {
  background: #064559;
}

div#sidebar {
  padding: 0px;
  border-right: 1px solid #cccccc;
}

div#sidebar table tr td.h4 {
  padding-left: 10px;
}

div#sidebar table tr td {
  padding-left: 20px;
}

// Bootstrap's row
.row {
  margin: 10px 0px 10px 0px;
  //padding: 0px 0px 10px 0px;  // Do not add padding to the row - messes up sidebar etc.
}

div.wrapper {
  *zoom: 1;
  background-color: #FFF;
  border: 1px solid #cccccc;
  -webkit-border-radius: 4px;
  -moz-border-radius: 4px;
  border-radius: 4px;
  -webkit-box-shadow: 0 0 0 4px rgba(0, 0, 0, 0.05);
  -moz-box-shadow: 0 0 0 4px rgba(0, 0, 0, 0.05);
  box-shadow: 0 0 0 4px rgba(0, 0, 0, 0.05);
  position: relative;
  background-color: #fff;
  margin-bottom: 20px;
  margin-left: 0;
  display: flex;
  flex-direction: row;
  align-items: stretch;
}

// Sidebar with facet filtering
div#sidebar table tr td a {
  color: #000000;
  padding: 3px;
  text-decoration: none;
}

div#sidebar table tr td a:hover {
  background-color: #B0C3C9;
  color: #ffffff;
  padding: 3px;
  text-decoration: none;
}

// ######## Media-bricks modified from CKAN
.media-grid {
  margin: 0px 0px 15px 0px;
  list-style: none;
  *zoom: 1;
  padding-bottom: 15px;
  background: #fbfbfb url("/assets/bg.png");
  border: 1px solid #dddddd;
  border-width: 1px;
}

.media-grid:before,
.media-grid:after {
  display: table;
  content: "";
  line-height: 0;
}

.media-grid:after {
  clear: both;
}

.media-item {
  position: relative;
  float: left;
  width: 200px;
  padding: 15px;
  margin: 15px 0 0 15px;
  background-color: white;
  -webkit-border-radius: 5px;
  -moz-border-radius: 5px;
  border-radius: 5px;
}

.media-item.long {
  width: 90%;
}

.media-item span.count {
  color: #999;
}

.media-item .media-image {
  margin-bottom: 5px;
}

.media-item .media-edit {
  opacity: 0;
  position: absolute;
  right: 15px;
  bottom: 15px;
  -webkit-transition: opacity 0.2s ease-in;
  -moz-transition: opacity 0.2s ease-in;
  -o-transition: opacity 0.2s ease-in;
  transition: opacity 0.2s ease-in;
}

.media-item:hover {
  z-index: 1;
}

.media-item:hover .media-edit {
  opacity: 1;
}

li.media-item {
  list-style-type: none;
}

.media-view {
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  border: 1px solid #dddddd;
  overflow: hidden;
  -webkit-transition: all 0.2s ease-in;
  -moz-transition: all 0.2s ease-in;
  -o-transition: all 0.2s ease-in;
  transition: all 0.2s ease-in;
  -webkit-border-radius: 5px;
  -moz-border-radius: 5px;
  border-radius: 5px;
  z-index: 2;
  -ms-word-break: break-all;
  word-break: break-word;
  /* Non standard for webkit */
  //word-break: break-word;
  -webkit-hyphens: auto;
  -moz-hyphens: auto;
  -ms-hyphens: auto;
  hyphens: auto;
}

.media-view:hover,
.media-view.hovered {
  border-color: #005d7a;
  -webkit-box-shadow: 0 0 0 4px rgba(0, 0, 0, 0.1);
  -moz-box-shadow: 0 0 0 4px rgba(0, 0, 0, 0.1);
  box-shadow: 0 0 0 4px rgba(0, 0, 0, 0.1);
}

.media-view:hover .banner,
.media-view.hovered .banner {
  background-color: #005d7a;
}

.media-view span {
  display: none;
}

.media-view .banner {
  display: block;
  background-color: #b7b7b7;
  -webkit-transition: background-color 0.2s ease-in;
  -moz-transition: background-color 0.2s ease-in;
  -o-transition: background-color 0.2s ease-in;
  transition: background-color 0.2s ease-in;
}

.media-image {
  -webkit-border-radius: 4px;
  -moz-border-radius: 4px;
  border-radius: 4px;
}
/* ... */

